tests/invalid_typecheck/test_tc_invoke_bool_var.aphi
/*
Type-check error: Cannot invoke 'flag' because it is of type bool, not a procedure.
Tries to invoke a bool variable.
*/

bool flag;

procedure main {
    flag = true;
    invoke flag;
}
